scripts/nullness/original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8.txt
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriCalculator.java:54: error: [initialization.field.uninitialized] the default constructor does not initialize field units
		    String units;	/* Units used to denote before/after epoch */
		           ^
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/hijri/HijriNames.java:8: error: [initialization.static.field.uninitialized] static field instance not initialized
	private static HijriNames instance;
	                          ^
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/Method.java:282: error: [initialization.fields.uninitialized] the constructor does not initialize fields: round, mathhab, extremeLatitude
	protected Method() {
	          ^
../original/urla134d66615_fikr4n_itl_java_tgz-pJ8-example_ExampleJ8/src/org/arabeyes/itl/prayer/TimeNames.java:8: error: [initialization.static.field.uninitialized] static field instance not initialized
	private static TimeNames instance;
	                         ^
4 errors
